--- a/public/style/css/global.css
+++ b/public/style/css/global.css
@@ -20,18 +20,18 @@ body{
     font-family: 'Unbounded', cursive;
     word-spacing: 10%;
     font-size: 16px;
-    font-size: 10vw;
+    font-size: 7vw;
     font-weight: bold;
     color: white;
   }
 #second{
     font-family: 'Source Code Pro', monospace;
     word-spacing:inherit;
-    line-height: 90%;
+    line-height: 50%;
     font-size: 10px;
-    font-size: 5vw;
+    font-size: 3vw;
     font-weight: normal;
-    color: white;
+    /* color: white; */
     padding: 1%;
 }
 
