--- a/public/style/css/global.css
+++ b/public/style/css/global.css
@@ -22,13 +22,13 @@ body{
     font-size: 16px;
     font-size: 7vw;
     font-weight: bold;
-    color: white;
+    /* color: white; */
   }
 #second{
     font-family: 'Source Code Pro', monospace;
     word-spacing:inherit;
-    line-height: 50%;
-    font-size: 10px;
+    line-height: 90%;
+    /* font-size: 10px; */
     font-size: 3vw;
     font-weight: normal;
     /* color: white; */
@@ -47,7 +47,7 @@ body{
 
 #third:hover{
     color: white;  
-    transition: color 1s ease-out 100ms;
+    transition: color 100ms ease-out 50ms;
 }   
 
 /* Layouts */
