fixing #first padding and margins

--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -11,7 +11,7 @@
                 {{!-- <div class="col"> --}}
                     <div id="first">{{name}}</div>
                     <div id="second">{{title1}}</div>
-                    <div id="second">{{title2}}</div>
+                    {{!-- <div id="second">{{title2}}</div> --}}
                 {{!-- </div> --}}
             
 
