--- a/public/style/css/global.css
+++ b/public/style/css/global.css
@@ -1,9 +1,9 @@
 html{
-    background-color: black;
+    background-color: #FFFFF3;
 }
 
 body{
-    background-color: black;
+    background-color: #FFFFF3;
 }
 
 /* For the Resume */
@@ -14,25 +14,27 @@ body{
     padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
   }
 
-
 /* Fonts */
 #first{
     font-family: 'Unbounded', cursive;
     word-spacing: 10%;
+    height: fit-content;
+    width: fit-content;
+    padding: 10px;
+    margin: 10px;
+    align-items: center;
     font-size: 16px;
     font-size: 7vw;
     font-weight: bold;
-    /* color: white; */
+
   }
 #second{
     font-family: 'Source Code Pro', monospace;
     word-spacing:inherit;
     line-height: 90%;
-    /* font-size: 10px; */
     font-size: 3vw;
     font-weight: normal;
-    /* color: white; */
-    padding: 1%;
+    padding: 10px;
 }
 
 #third{
@@ -55,7 +57,8 @@ body{
     box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
-    padding: 2px;
+    padding: 10px;
+    margin: 10px;
 }
 
 .container-fluid {
