--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -8,36 +8,32 @@
         <div class="container-fluid text-center">
 
             <div class="row justify-content-center" id="pageRow">
-                {{!-- <div class="col"> --}}
+                <div class="headContainer">
                     <div id="first">{{name}}</div>
+                       <div class="sep"></div>
                     <div id="second">{{title1}}</div>
-                    {{!-- <div id="second">{{title2}}</div> --}}
-                {{!-- </div> --}}
-            
+                </div>
 
             <div class="row content justify-content-center" id="resumeButton">
-                <a style="text-decoration: none;" href={{button1.url}} download="TaylorPayneResume">
-                        <div id="third">{{button1.text}}</div>
+                <a style="text-decoration: none;" href={{button1.url}} download="TaylorPayneResume" id="third">              
+                    {{button1.text}}
                 </a>
             </div>
 
             <div class="row contentjustify-content-center" id="transcriptButton">
-                <a style="text-decoration: none;" href={{button2.url}} download="Transcript">
-                        <div id="third">{{button2.text}}</div>
+                <a style="text-decoration: none;" href={{button2.url}} download="Transcript"id="third"> 
+                    {{button2.text}}
                 </a>
-            </div>
 
             <div class="row content justify-content-center" id="githubButton">
-                <a style="text-decoration: none" href={{button3.url}}>
-                            <div id="third">{{button3.text}}</div>
+                <a style="text-decoration: none" href={{button3.url}} id="third">
+                    {{button3.text}}
                 </a>
-            </div>
 
              <div class="row content justify-content-center" id="linkedinButton">
-                <a style="text-decoration: none" href={{button4.url}}>
-                        <div id="third">{{button4.text}}</div>
+                <a style="text-decoration: none" href={{button4.url}} id="third">
+                    {{button4.text}}
                 </a>
-            </div>
         
             {{!-- Black Footer --}}
             <div class="row content justify-content-center"></div>
