--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -6,7 +6,6 @@
     </head>
     <body>
         <div class="container-fluid text-center">
-
             <div class="row justify-content-center" id="pageRow">
                 <div class="headContainer">
                     <div id="first">{{name}}</div>
@@ -21,19 +20,22 @@
             </div>
 
             <div class="row contentjustify-content-center" id="transcriptButton">
-                <a style="text-decoration: none;" href={{button2.url}} download="Transcript"id="third"> 
+                <a style="text-decoration: none;" href={{button2.url}} download="Transcript" id="third"> 
                     {{button2.text}}
                 </a>
+            </div>
 
             <div class="row content justify-content-center" id="githubButton">
                 <a style="text-decoration: none" href={{button3.url}} id="third">
                     {{button3.text}}
                 </a>
+            </div>
 
              <div class="row content justify-content-center" id="linkedinButton">
                 <a style="text-decoration: none" href={{button4.url}} id="third">
                     {{button4.text}}
                 </a>
+            </div>
         
             {{!-- Black Footer --}}
             <div class="row content justify-content-center"></div>
