stylized and optimized the landing page

--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -9,8 +9,9 @@
             <div class="row justify-content-center" id="pageRow">
                 <div class="headContainer">
                     <div id="first">{{name}}</div>
-                       <div class="sep"></div>
-                    <div id="second">{{title1}}</div>
+                    <div id="second" style:'color: blue;'>{{title1}}</div>
+                    <div id="second"> {{title2}}</div>
+                     <hr class="sep"></hr>
                 </div>
 
             <div class="row content justify-content-center" id="resumeButton">
@@ -38,7 +39,7 @@
             </div>
         
             {{!-- Black Footer --}}
-            <div class="row content justify-content-center"></div>
+            <div class="row content justify-content-center" style="background-color: #FFFFF3"></div>
         </div>
     </body>
 </html>
