--- a/public/style/css/global.css
+++ b/public/style/css/global.css
@@ -1,5 +1,7 @@
 html{
     background-color: #FFFFF3;
+    width: 100%;
+    height: 100%;
 }
 
 body{
@@ -19,45 +21,46 @@ a{
   }
 
 .sep{
-    width: 5%;
+    height: fit-content;
+    width: fit-content;
+    width: 100%;
     color: black;
-    size: 50px;
+    size: 50%;
+    opacity: 100%;
 }
 .headContainer{
     padding-left: 10%;
     padding-right: 10%;
     align-items: center;
+    background-color:#FFFFF3;
 }
 
 /* Fonts */
 #first{
-    font-family: 'Unbounded', cursive;
-    height: fit-content;
-    /* padding: 10px; */
-    /* margin: 10px; */
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 40px;
+    padding-left: 5%;
+    letter-spacing: 34;
     text-align: center;
-    font-size:7vw;
-    font-weight: bold;
-
   }
 #second{
-    font-family: 'Source Code Pro', monospace;
-
-    height: fit-content;
-    width: fit-content;
-    line-height: 90%;
-    font-size: 5vw;
+   font-family: 'Unbounded', cursive;
+   font-weight: lighter;
+    padding-left: 5%;
+    padding-right: 5%;
+    text-align: justify;
+    font-size: 1.5rem;
     font-weight: normal;
-    padding: 10px;
 }
 
 #third{
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Source Code Pro', monospace;
     position: relative;
     width:100%;
     height: 100%;
     padding-bottom: auto;
-    /* backup size */
+    padding-left: 10%;
+    padding-right: 10%;
     font-size: 10px;
     font-size:6vw;
     text-decoration: none;
@@ -117,7 +120,7 @@ a{
     .col-s-11 {width: 91.66%;}
     .col-s-12 {width: 100%;}
 
-    #first {font-size: 8vw; text-align: justify;}
+    #first {font-size: 60sp; text-align: justify;}
     #second {font-size: 6vw; text-align: justify;}
     #third {font-size: 6vw; }
 
