--- a/public/style/css/global.css
+++ b/public/style/css/global.css
@@ -15,8 +15,8 @@ html{
 body{
     background-color: var(--primary_background);
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
 }
 
 a{
