--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -6,12 +6,13 @@
     </head>
     <body>
                 <div class="mainContainer">
+                    <div class="titleCont">
                     <div class="js-type" id="first">{{name}}</div>
                     <div id="second">{{title1}} | {{title2}}</div>
                      <hr class="sep"></hr>
+                     </div>
                 </div>
                  <div class="secContainer">
-                   
                     <div id="secondDesc">
                         With 4 years of experience in Computer Science my passions have found themselves in Web Design, Web Development,
                         Image Manipulation, and Software Engineering. My interests stem from my time as a Graphic Designer. When I became 
@@ -50,7 +51,7 @@
                 <a style="text-decoration: none" href = "mailto: taylorpaynedev@gmail.com" id="third">Contact Me</a>
                 </div>
         </div>
-        </div>
+        {{!-- </div> --}}
 
     </body>
 </html>
