--- a/public/style/css/global.css
+++ b/public/style/css/global.css
@@ -3,7 +3,7 @@
     --primary_background: #FFFFF3;
     --first_size: 8vw;
     --secondSubHead_size: 3vw;
-    --second_size: 5vw;
+    --second_size: 4vw;
     --third_size: 10vw;
 }
 
@@ -38,6 +38,7 @@ a {
     display: flex;
     height: fit-content;
     position: relative;
+    text-align: left;
     background-color: whitesmoke;
 }
 
@@ -54,7 +55,7 @@ a {
     text-align: center;
 }
 
-#second, #secondDesc {
+#second{
     padding: 0 5%;
     text-align: center;
 }
@@ -65,6 +66,8 @@ a {
 
 #secondDesc {
     font-size: var(--second_size);
+    text-align: left;
+    padding: 5%;
 }
 
 #third {
