--- a/public/style/css/global.css
+++ b/public/style/css/global.css
@@ -3,7 +3,7 @@
     --primary_background: #FFFFF3;
     --first_size: 8vw;
     --secondSubHead_size: 3vw;
-    --second_size: 4vw;
+    --second_size: 3vw;
     --third_size: 10vw;
 }
 
@@ -32,18 +32,20 @@ a {
     position: relative;
     align-items: center;
     background-color: var(--primary_background);
+    
 }
 
 .secContainer {
     display: flex;
     height: fit-content;
+    width: fit-content;
     position: relative;
     text-align: left;
-    background-color: whitesmoke;
-}
-
-.titleCont {
-    display: inline-box;
+    background-image: linear-gradient(to right, rgb(255, 250, 93), rgb(255, 300, 93));
+    padding-top: 2%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 2%;
 }
 
 /* Fonts and Text Styles */
@@ -67,7 +69,6 @@ a {
 #secondDesc {
     font-size: var(--second_size);
     text-align: left;
-    padding: 5%;
 }
 
 #third {
