Change the statement and made overflow hidden

--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -12,12 +12,11 @@
                 </div>
                  <div class="secContainer">
                     <div id="secondDesc">
-                        With 4 years of experience in Computer Science my passions have found themselves in Web Design, Web Development,
-                        Image Manipulation, and Software Engineering. My interests stem from my time as a Graphic Designer. When I became 
-                        enthralled with the inner workings of Adobe Photoshop. Which led to my first attempt at back-end development with
-                        a pixel-drifting program that I wrote in python during my freshman year. Since then I have been learning more and
-                        more about project development outside of classes and developing this website. When I am not learning about programming
-                        I am probably playing video games with my friends, drawing, or reading.
+                        With a passion for creating, my interests have found themselves in the Software Development
+                        and Web Development field. I have experience with React-Native, Express.js, QT and other popular
+                        frameworks. I am currently looking for a new-graduate position for when I graduate in May 2024 from 
+                        the University of Kentucky. Feel free to contact me if you want to develop togther, I am always open to 
+                        new projects!
                     </div>
                 </div>
         <div class="mainContainer">
@@ -41,13 +40,14 @@
                     {{button4.text}}
                 </a>
             </div>
-        </div>
-
      
-            <div class="footer">
-                <div class="row" id="EmailButton">
+            <div class="row" id="EmailButton">
                 <a style="text-decoration: none" href = "mailto: taylorpaynedev@gmail.com" id="third">Contact Me</a>
                 </div>
+            </div>
+     
+            <div class="footer">
+              
         </div>
         {{!-- </div> --}}
 
