--- a/public/style/css/global.css
+++ b/public/style/css/global.css
@@ -7,11 +7,14 @@
     --third_size: 10vw;
 }
 
+
+
 /* Global Styles */
 html, body {
     background-color: var(--primary_background);
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 a {
@@ -35,7 +38,7 @@ a {
 }
 
 .secContainer {
-    display: flex;
+    /* display: flex; */
     height: fit-content;
     width: fit-content;
     position: relative;
@@ -88,15 +91,16 @@ a {
 
 /* Layouts */
 .row {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     min-width: 100%;
 }
 
 .footer {
     margin-top: auto;
     background-color: var(--primary_background);
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
+    content: '';
 }
 
 /* Responsive Designs */
