--- a/public/style/css/global.css
+++ b/public/style/css/global.css
@@ -1,20 +1,38 @@
 /* Root Variables */
-:root {
-    --primary_background: #FFFFF3;
-    --first_size: 8vw;
-    --secondSubHead_size: 3vw;
-    --second_size: 3vw;
-    --third_size: 10vw;
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
 }
 
+:root{
+    --bg: #fff;
+    --text: #000;
+    --first_size: 8vw;
+    --secondSubHead_size: 3vw;
+    --second_size: 2vw;
+    --third_size: 5vw;
+
+}
 
 
 /* Global Styles */
 html, body {
-    background-color: var(--primary_background);
+    background-color: var(--bg);
+    color: var(--text);
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+}
+
+head {
+    height: 0;
+    width: 0;
+    overflow: hidden;
 }
 
 a {
@@ -23,17 +41,22 @@ a {
 }
 
 .sep {
+    margin: 10px;
     height: fit-content;
     width: 100%;
     color: black;
 }
 
 .mainContainer {
-    padding: 1%;
+    /* Sticking it the top of the page     */
+    /* position: sticky; */
+    top: 0;
+
+    padding-left: 3%;
+    padding-right: 3%;
     height: fit-content;
-    position: relative;
     align-items: center;
-    background-color: var(--primary_background);
+    background-color: var(--bg);
     
 }
 
@@ -43,11 +66,11 @@ a {
     width: fit-content;
     position: relative;
     text-align: left;
-    background-color: var(--primary_background);
-    padding-top: 2%;
+    background-color: var(--bg);
+    padding-top: 5%;
     padding-left: 5%;
     padding-right: 5%;
-    padding-bottom: 2%;
+    padding-bottom: 5%;
 }
 
 /* Fonts and Text Styles */
@@ -55,7 +78,7 @@ a {
     font-family: 'aeroportmono', monospace;
     font-size: var(--first_size);
     padding: 0 5%;
-    letter-spacing: 34;
+    letter-spacing: 0;
     text-align: center;
 }
 
@@ -97,8 +120,7 @@ a {
 
 .footer {
     margin-top: auto;
-    background-color: var(--primary_background);
-    /* height: 100%; */
+    background-color: var(--bg);
     width: 100%;
     content: '';
 }
@@ -112,13 +134,13 @@ a {
         font-size: 6vw;
     }
     #second {
-        font-size: 3vw;
+        font-size: var(--second_size);
     }
     #secondDesc {
         font-size: 2.5vw;
     }
     #third {
-        font-size: 6vw;
+        font-size: 5vw;
     }
 }
 
@@ -130,16 +152,18 @@ a {
         font-size: 6vw;
     }
     #second {
-        font-size: 3vw;
+        font-size: var(--second_size);
     }
     #secondDesc {
         font-size: 2vw;
     }
     #third {
-        font-size: 6vw;
+        font-size: 5vw;
     }
     #third:hover {
         padding-left: 10%;
         transition: padding-left 100ms ease-out 30ms;
     }
 }
+
+
