--- a/public/style/css/landing.css
+++ b/public/style/css/landing.css
@@ -1,16 +1,23 @@
 :root {
   --button_height: 6vw;
-  --bg: #fff;
-  --text: #000;
+  --bg: #0A0A0A;
+  --text: #fff;
   --yyGrad: rgb(255, 200, 93), rgb(255, 250, 93);
   --yoGrad:  rgb(255, 150, 93), rgb(255, 200, 93);
   --roGrad:  rgb(255, 100, 93), rgb(255, 150, 93);
   --rrGrad: rgb(255, 50, 93), rgb(255, 100, 93);
   --drrGrad: rgb(255,0,93), rgb(255, 50, 93);
 }
+
+body {
+  background-color: var(--bg);
+  color: #fff;
+}
+
 #resumeButton{
   background-color: var(--bg);
   min-height: var(--button_height);
+  color:var(--text);
 }
 
 #resumeButton:hover{
@@ -22,6 +29,8 @@
 #transcriptButton{
   background-color: var(--bg);
   min-height: var(--button_height);
+  color:var(--text);
+
 }
 
 #transcriptButton:hover{
@@ -33,6 +42,8 @@
 #githubButton{
   background-color: var(--bg);
   min-height: var(--button_height);
+  color:var(--text);
+
 }
 
 #githubButton:hover{
@@ -42,6 +53,8 @@
 #linkedinButton{
   background-color: var(--bg);
   min-height: var(--button_height);
+  color:var(--text);
+
 }
 
 #linkedinButton:hover{
@@ -53,6 +66,8 @@
 #EmailButton{
   background-color: var(--bg);
   min-height: var(--button_height);
+  color:var(--text);
+
 }
 
 #EmailButton:hover{
