--- a/public/style/css/global.css
+++ b/public/style/css/global.css
@@ -10,8 +10,8 @@
 }
 
 :root{
-    --bg: #fff;
-    --text: #000;
+    --bg: #0A0A0A;
+    --text: #fff;
     --first_size: 8vw;
     --secondSubHead_size: 3vw;
     --second_size: 2vw;
@@ -23,6 +23,7 @@
 /* Global Styles */
 html, body {
     background-color: var(--bg);
+    color: var(--text);
     color: var(--text);
     width: 100%;
     height: 100%;
@@ -103,7 +104,7 @@ a {
     width: 100%;
     padding: 0 5%;
     text-decoration: none;
-    color: black;
+    color: var(--text);
     text-align: center;
 }
 
@@ -116,6 +117,7 @@ a {
 .row {
     /* box-sizing: border-box; */
     min-width: 100%;
+    color:#fff;
 }
 
 .footer {
