--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -10,7 +10,7 @@
                     <div id="second">{{title1}} | {{title2}}</div>
                      <hr class="sep"></hr>
                 </div>
-                 <div class="secContainer">
+                 {{!-- <div class="secContainer">
                     <div id="secondDesc">
                         With a passion for creating, my interests have found themselves in the Software Development
                         and Web Development field. I have experience with React-Native, Express.js, QT and other popular
@@ -18,7 +18,7 @@
                         the University of Kentucky. Feel free to contact me if you want to develop togther, I am always open to 
                         new projects!
                     </div>
-                </div>
+                </div> --}}
         <div class="mainContainer">
             <div class="row" id="resumeButton">
                 <a style="text-decoration: none;" href={{button1.url}} download="TaylorPayneResume" id="third">              
