--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -4,13 +4,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" href="./style/css/landing.css">
     </head>
-    <body>
-                <div class="mainContainer">
+    <                <div class="mainContainer">
                     <div class="js-type" id="first">{{name}}</div>
                     <div id="second">{{title1}} | {{title2}}</div>
                      <hr class="sep"></hr>
                 </div>
-                 {{!-- <div class="secContainer">
+                 <div c{{!-- lass="secContainer">
                     <div id="secondDesc">
                         With a passion for creating, my interests have found themselves in the Software Development
                         and Web Development field. I have experience with React-Native, Express.js, QT and other popular
@@ -18,10 +17,10 @@
                         the University of Kentucky. Feel free to contact me if you want to develop togther, I am always open to 
                         new projects!
                     </div>
-                </div> --}}
-        <div class="mainContainer">
+                </div>
+      --}}   <div class="mainContainer">
             <div class="row" id="resumeButton">
-                <a style="text-decoration: none;" href={{button1.url}} download="TaylorPayneResume" id="third">              
+                <a style="text-decoration: none;" href={{button1.url}} download="TaylorPayneResume" id="third">         
                     {{button1.text}}
                 </a>
             </div>
@@ -51,5 +50,5 @@
         </div>
         {{!-- </div> --}}
 
-    </body>
-</html>
+ackground-color: #FFFFF3"></div>
+        </div>
