--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,12 +3,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./style/css/global.css">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&family=Ubuntu:ital,wght@0,400;1,700&family=Unbounded:wght@200;700&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+    {{!-- Dark Mode implementation --}}
+    <script src="../../modeDetect.js"></script>
+    {{!-- PDF viewer --}}
+    <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
+
 </head>
 
 
