--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,9 +1,8 @@
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8" />
+    <meta charset="utf-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./style/css/global.css">
-
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,30 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
     {{!-- Dark Mode implementation --}}
-    <script src="../../modeDetect.js"></script>
     {{!-- PDF viewer --}}
-    <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
-
+    {{!-- <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script> --}}
 </head>
-
-
-    {{!-- Navigation Bar
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <img src="walk.gif" height="30" width="30" alt="">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" href="/"> Home <span class="sr-only"></span></a>
-          </li>
-        <li class="nav-item active">
-            <a class="nav-link" href="/gallery">Gallery <span class="sr-only"></span></a>
-          </li>
-        </ul>
-      </div>
-    </nav> --}}
     <body>
         <h1>{{title}}</h1>
         {{!-- alerts --}}
