--- a/public/style/css/global.css
+++ b/public/style/css/global.css
@@ -12,7 +12,7 @@
 :root{
     --bg: #fff;
     --text: #000;
-    background-image: linear-gradient(to right,var(--rrGrad));
+    --red: linear-gradient(to right,var(--rrGrad));
     --first_size: 8vw;
     --secondSubHead_size: 3vw;
     --second_size: 3vw;
@@ -127,12 +127,11 @@ a {
     width: 100%;
     padding: 3% 5%;
     text-decoration: none;
-    color: white;
+    color: black;
     margin-top: auto;
     margin-bottom: auto;
 
 }
-
 
 /* Layouts */
 .row {
