--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -14,8 +14,12 @@
                 <div class="row">
                     <div class="card">
                         <a style='text-decoration: none;' href="https://github.com/mentaldropouts/collageApp" id="ProjectTitle">
-                            Collage Maker
+                            {{project1.title}}
                         </a>
+                        <div class="card-body">
+                            {{project1.desc}}
+                        </div>                    
+
                     </div>
                 </div>
 
