--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -26,7 +26,7 @@
                 <div class="row">
                     <div class="card">
                         <a style='text-decoration: none;' href="https://github.com/mentaldropouts/PokemonDeciderApp" id="ProjectTitle">
-                            Pokemon Decider App
+                            {{project2.title}}
                         </a>
                     </div>
                 </div>
